var searchData=
[
  ['uint16array',['Uint16Array',['../namespaceshaka_1_1proto.html#a66e9de11650d6353870963e3c6f18f9fac731724f400b72aeb9423939490f3cd3',1,'shaka::proto']]],
  ['uint32array',['Uint32Array',['../namespaceshaka_1_1proto.html#a66e9de11650d6353870963e3c6f18f9fa07b63a0be3cc38b9569af2163bd6be80',1,'shaka::proto']]],
  ['uint8array',['Uint8Array',['../namespaceshaka_1_1proto.html#a66e9de11650d6353870963e3c6f18f9fa60ad462b455eaf91197fd5730baec346',1,'shaka::proto']]],
  ['uint8clampedarray',['Uint8ClampedArray',['../namespaceshaka_1_1proto.html#a66e9de11650d6353870963e3c6f18f9fada929cdd5be7eab85f9a2b40c435fda7',1,'shaka::proto']]],
  ['undefined',['Undefined',['../namespaceshaka_1_1proto.html#a66e9de11650d6353870963e3c6f18f9fa6651e6c1c189ad4784499ce5e9aa319c',1,'shaka::proto']]],
  ['union_5f',['union_',['../classshaka_1_1impl_1_1union__.html',1,'shaka::impl']]],
  ['union_5f',['union_',['../classshaka_1_1impl_1_1union__.html#adba2bcc790d8221af5e786ddba513ba0',1,'shaka::impl::union_::union_()'],['../classshaka_1_1impl_1_1union__.html#a84fd9ac9054c5f467bb75d76c182bf61',1,'shaka::impl::union_::union_(const union_ &amp;)=delete'],['../classshaka_1_1impl_1_1union__.html#a4cac438c012a809fda624c76c8fd6585',1,'shaka::impl::union_::union_(union_ &amp;&amp;)=delete'],['../classshaka_1_1impl_1_1union___3_01T_01_4.html#a59eba309d7be1dc1240e4e0763cee930',1,'shaka::impl::union_&lt; T &gt;::union_()'],['../classshaka_1_1impl_1_1union___3_01T_01_4.html#ab7169374bde86d8a8f12906724aa7490',1,'shaka::impl::union_&lt; T &gt;::union_(const union_ &amp;)=delete'],['../classshaka_1_1impl_1_1union___3_01T_01_4.html#ae5d199caae8670d91eb6e2f99d657a40',1,'shaka::impl::union_&lt; T &gt;::union_(union_ &amp;&amp;)=delete']]],
  ['union_5f_3c_20rest_2e_2e_2e_20_3e',['union_&lt; Rest... &gt;',['../classshaka_1_1impl_1_1union__.html',1,'shaka::impl']]],
  ['union_5f_3c_20t_20_3e',['union_&lt; T &gt;',['../classshaka_1_1impl_1_1union___3_01T_01_4.html',1,'shaka::impl']]],
  ['union_5f_3c_20types_2e_2e_2e_20_3e',['union_&lt; Types... &gt;',['../classshaka_1_1impl_1_1union__.html',1,'shaka::impl']]],
  ['unknown',['Unknown',['../namespaceshaka_1_1proto.html#a66e9de11650d6353870963e3c6f18f9fa70e4c800c58186ea0d66ae3a7a8517fd',1,'shaka::proto::Unknown()'],['../group__media.html#gga599fa8b5e30610a62a4d0fcd14dcce09a88183b946cc5f0e8c96b2e66e1c74a7e',1,'shaka::media::Unknown()'],['../group__media.html#ggacd17c8e9b77584f1d1030b841cac9deca88183b946cc5f0e8c96b2e66e1c74a7e',1,'shaka::media::Unknown()'],['../group__media.html#gga7ba173ffc4198f2a7fa8b395880fdadda88183b946cc5f0e8c96b2e66e1c74a7e',1,'shaka::media::Unknown()'],['../namespaceshaka.html#ad8d6919b5dcc8557f2fc6f169f48496ca88183b946cc5f0e8c96b2e66e1c74a7e',1,'shaka::Unknown()']]],
  ['unknown_5ffields',['unknown_fields',['../classshaka_1_1proto_1_1Object__Entry.html#aeec1349499794f95fb8647f647a7426c',1,'shaka::proto::Object_Entry::unknown_fields()'],['../classshaka_1_1proto_1_1Object.html#a2a95fb2196671a508b05c22a8482de9f',1,'shaka::proto::Object::unknown_fields()'],['../classshaka_1_1proto_1_1Value.html#a780afc8f6c93a451e3b00de5211cf80a',1,'shaka::proto::Value::unknown_fields()'],['../classshaka_1_1proto_1_1MediaInfo__Frame.html#acfdbb85dfe73b0bf86d8e22db0ea233a',1,'shaka::proto::MediaInfo_Frame::unknown_fields()'],['../classshaka_1_1proto_1_1MediaInfo__Stream.html#af834d261c56976dcd5538f85f60db2da',1,'shaka::proto::MediaInfo_Stream::unknown_fields()'],['../classshaka_1_1proto_1_1MediaInfo.html#a94ff1606ff90f779465b56b6051c5ddd',1,'shaka::proto::MediaInfo::unknown_fields()']]],
  ['unknownerror',['UnknownError',['../namespaceshaka.html#ae8d497a0b741d2f5fbcf5410aae341e5ad15885c8ccee7d3642f12df9c02cbf30',1,'shaka::UnknownError()'],['../namespaceshaka_1_1js_1_1idb.html#a017e752abb22356ef65deed9b3198134abfaef30f1c8011c5cefa38ae470fb7aa',1,'shaka::js::idb::UnknownError()']]],
  ['unload',['Unload',['../classshaka_1_1Player.html#a27ca0597edf3f1908528f445c53fa275',1,'shaka::Player']]],
  ['unloadwithblock_3a',['unloadWithBlock:',['../interfaceShakaPlayer.html#a259822debdf6de997165d7694cb10bca',1,'ShakaPlayer']]],
  ['unlock',['unlock',['../classshaka_1_1DebugMutex.html#acc2bea8362c192fe6bcafbf7bd1caa81',1,'shaka::DebugMutex::unlock()'],['../classshaka_1_1util_1_1shared__mutex.html#ace98a48a47c3ad9375780d92cecf033e',1,'shaka::util::shared_mutex::unlock()']]],
  ['unlock_5fshared',['unlock_shared',['../classshaka_1_1DebugMutex.html#a001c13e0e86d0152014b7c83944690a1',1,'shaka::DebugMutex::unlock_shared()'],['../classshaka_1_1util_1_1shared__mutex.html#aa3a8de427c1c57c0503206d4bb4cbd7e',1,'shaka::util::shared_mutex::unlock_shared()']]],
  ['unlocker',['Unlocker',['../structshaka_1_1util_1_1Unlocker.html',1,'shaka::util']]],
  ['unlocker',['Unlocker',['../structshaka_1_1util_1_1Unlocker.html#a390c024ec1c760770598133cbb3a4e2d',1,'shaka::util::Unlocker']]],
  ['unregisternetworkscheme',['UnregisterNetworkScheme',['../classshaka_1_1JsManager.html#a3660f9a57657ecbfc626abb6261f1883',1,'shaka::JsManager']]],
  ['unsafejscast',['UnsafeJsCast',['../namespaceshaka.html#a4dde3f73acdf489d3ac2f6b845954e0f',1,'shaka']]],
  ['unsent',['Unsent',['../classshaka_1_1js_1_1XMLHttpRequest.html#a5a7bfed6934ba80319805bd55944e077a97996499d610d71f558999a62f60e91d',1,'shaka::js::XMLHttpRequest']]],
  ['unsetcppeventlistener',['UnsetCppEventListener',['../classshaka_1_1js_1_1events_1_1EventTarget.html#a82359e3718f7089bb85c63fac89340fa',1,'shaka::js::events::EventTarget']]],
  ['unsetfortesting',['UnsetForTesting',['../structshaka_1_1PseudoSingleton_1_1UnsetForTesting.html',1,'shaka::PseudoSingleton']]],
  ['unsetfortesting',['UnsetForTesting',['../structshaka_1_1PseudoSingleton_1_1UnsetForTesting.html#ac191380e3c7f249f5c06f1d12acf1e3f',1,'shaka::PseudoSingleton::UnsetForTesting']]],
  ['unspecified',['Unspecified',['../group__mediaCapabilities.html#gga66f9cebe528fd50520866e2c8de0c9e9a6fcdc090caeade09d0efd6253932b6f5',1,'shaka::media::Unspecified()'],['../group__mediaCapabilities.html#ggaa02a053cb6ce5bd743daa606cbb78f1ca6fcdc090caeade09d0efd6253932b6f5',1,'shaka::media::Unspecified()'],['../group__mediaCapabilities.html#ggaba5deb65c15e9474dd33b4b17b80d188a6fcdc090caeade09d0efd6253932b6f5',1,'shaka::media::Unspecified()']]],
  ['update',['Update',['../classshaka_1_1eme_1_1Implementation.html#a1cda56831a4c9b3f7ad176ff3ec7d786',1,'shaka::eme::Implementation::Update()'],['../classshaka_1_1eme_1_1ClearKeyImplementation.html#a7a94cdc548706d1f41de0ca99ae4983c',1,'shaka::eme::ClearKeyImplementation::Update()'],['../classshaka_1_1js_1_1eme_1_1MediaKeySession.html#a03d0c1b3803706efa9a3e7ac28396202',1,'shaka::js::eme::MediaKeySession::Update()']]],
  ['updateandgetvideoplaybackstate',['UpdateAndGetVideoPlaybackState',['../classshaka_1_1media_1_1ios_1_1AvMediaPlayer_1_1Impl.html#aff6bad7e814dd29618d5c61081965bc7',1,'shaka::media::ios::AvMediaPlayer::Impl']]],
  ['updateandgetvideoreadystate',['UpdateAndGetVideoReadyState',['../classshaka_1_1media_1_1ios_1_1AvMediaPlayer_1_1Impl.html#a30ff40e4051d988de0d627eafcd6d1e4',1,'shaka::media::ios::AvMediaPlayer::Impl']]],
  ['updatedata',['UpdateData',['../classshaka_1_1js_1_1idb_1_1SqliteTransaction.html#a4cacb6175f6506fda4d597b7c1acfe2c',1,'shaka::js::idb::SqliteTransaction']]],
  ['updatedbversion',['UpdateDbVersion',['../classshaka_1_1js_1_1idb_1_1SqliteTransaction.html#ad19097c8f353eb4bc6bf1427dd964de4',1,'shaka::js::idb::SqliteTransaction']]],
  ['updatevolume',['UpdateVolume',['../classshaka_1_1media_1_1AppleAudioRenderer_1_1Impl.html#a2a2bcfecaeea697bb9c155e183b5302a',1,'shaka::media::AppleAudioRenderer::Impl']]],
  ['updating',['updating',['../classshaka_1_1js_1_1mse_1_1SourceBuffer.html#a49fabaa9439e407e3e0ccf7bc4bb0b03',1,'shaka::js::mse::SourceBuffer']]],
  ['uri',['uri',['../classshaka_1_1Response.html#ac6469e5606699264e3c2c8a68ccfca74',1,'shaka::Response::uri()'],['../interfaceShakaPlayerResponse.html#a86547a704ef0858a6d7d234b56258f97',1,'ShakaPlayerResponse::uri()']]],
  ['uris',['uris',['../classshaka_1_1Request.html#a17bfc56fff5634c1bca8a681943cc095',1,'shaka::Request::uris()'],['../interfaceShakaPlayerRequest.html#aef3fcc5c706bb9b7a3b654fd1096d9e7',1,'ShakaPlayerRequest::uris()']]],
  ['url',['URL',['../classshaka_1_1js_1_1URL.html#a5af72b18210137d3422b60873d7c12fa',1,'shaka::js::URL::URL()'],['../structshaka_1_1Environment_1_1Impl.html#aadb4957064042378b4810c114dc860a9',1,'shaka::Environment::Impl::url()'],['../classshaka_1_1js_1_1mse_1_1MediaSource.html#a205e3897a60b9562646fc011c9257669',1,'shaka::js::mse::MediaSource::url()']]],
  ['url',['URL',['../classshaka_1_1js_1_1URL.html',1,'shaka::js']]],
  ['url_2ecc',['url.cc',['../url_8cc.html',1,'']]],
  ['url_2eh',['url.h',['../url_8h.html',1,'']]],
  ['urlfactory',['URLFactory',['../classshaka_1_1js_1_1URLFactory.html#abaf1ad31b2ea5658818adf29722b9f03',1,'shaka::js::URLFactory']]],
  ['urlfactory',['URLFactory',['../classshaka_1_1js_1_1URLFactory.html',1,'shaka::js']]],
  ['urlmismatcherror',['URLMismatchError',['../namespaceshaka.html#ae8d497a0b741d2f5fbcf5410aae341e5a2edf9eda0d7c74e394dbfd4e72f3b967',1,'shaka']]],
  ['usable',['Usable',['../group__eme.html#ggae4746fdb8db8ff35e1cb8ba92df649d0a619ea758392a33535f87d07568e11ae4',1,'shaka::eme']]],
  ['user_5fagent',['user_agent',['../classshaka_1_1js_1_1Navigator.html#ab7154c2b3525b9a4936c25cbbb618832',1,'shaka::js::Navigator::user_agent()'],['../navigator_8h.html#a8d49ab2f38a55ccc4f12fd9e5d29c07b',1,'USER_AGENT():&#160;navigator.h']]],
  ['usingembeddedtexttrack',['UsingEmbeddedTextTrack',['../classshaka_1_1Player.html#ab73462220f3e370d20c6c2c4b231790e',1,'shaka::Player']]],
  ['utilities',['Utilities',['../group__utils.html',1,'']]],
  ['utils_2ecc',['utils.cc',['../utils_8cc.html',1,'']]],
  ['utils_2eh',['utils.h',['../src_2util_2utils_8h.html',1,'']]],
  ['utils_2eh',['utils.h',['../include_2shaka_2utils_8h.html',1,'']]]
];
